v16
 # Course section 15: Collision System
    + Added BoxColliderComponent, CollisionSystem and RenderColliderSystem
      for collision detection and debug rendering of the collision boxes
    (section completed)

v15
  # Course section 14: Animation System
    + Added AnimationComponent and Animationsystem for animation sprites
    (section completed)

v14
  # Course section 13: Managing Assets
    + Added z-index to the SpriteComponent and sorting of sprites
      based on z-index in the RenderSystem (on every frame)

v13
  # Course section 13: Managing Assets
    + Added AssetStore for storing assets to be shared between entities
    + Added support for Textures to the AssetStore
    + Implemented storing of texture id in SpriteComponent and rendering of
      SpriteComponent textures in the RenderSystem
    + Added first implementation of the map

v12
  # Course section 12: Creating Systems
    + Added MovementSystem
    + Implemented update of MovementSystem and Register in the Update
      function of Game
    + Added first implementation of SpriteComponent
    + Added RenderSystem
    (section completed)
v11
  # Course section 11: Creating Entities & Components
    + Implemented Component functions to the entity class
      (AddComponent/RemoveComponent/HasComponent/GetComponent)
      by storing a pointer to the registry it was created in inside
      the Entity class and calling the Component functions in the Registry
      class from within the Entity class
    (section completed)

v10
  # Course section 11: Creating Entities & Components
    + Finished first implementation of entity creation and added a Registry
      instance to Game.cpp and used the Registry to create test entities
    + Replaced raw pointers with smart pointers
    + Finished first implementation of adding components to entities by
      using Registry->AddComponent

v9
  # Course section 10: ECS Implementation
    + Added Pool class (for storing a pool of components contigously)