@@ -8,6 +8,10 @@ int Entity::GetId() const {
     return id;
 }
 
+void Entity::Kill() {
+    registry->KillEntity(*this);
+}
+
 void System::AddEntityToSystem(Entity entity) {
     entities.push_back(entity);
 }
@@ -28,19 +32,30 @@ const Signature& System::GetComponentSignature() const {
 
 Entity Registry::CreateEntity() {
     int entityId;
-    entityId = numEntities++;
+
+    if (freeIds.empty()) {
+        // If there are no free ids waiting to be reused
+        entityId = numEntities++;
+        if (entityId >= static_cast<int>(entityComponentSignatures.size())) {
+            entityComponentSignatures.resize(entityId + 1);
+        }
+    } else {
+        // Reuse an id from the list of previously remove entities
+        entityId = freeIds.front();
+        freeIds.pop_front();
+    }
 
     Entity entity(entityId);
     entity.registry = this;
     entitiesToBeAdded.insert(entity);
 
-    if (entityId >= static_cast<int>(entityComponentSignatures.size())) {
-        entityComponentSignatures.resize(entityId + 1);
-    }
-
     Logger::Log("Entity created with id = " + std::to_string(entityId));
 
     return entity;
+}
+
+void Registry::KillEntity(Entity entity) {
+    entitiesToBeKilled.insert(entity);
 }
 
 void Registry::AddEntityToSystems(Entity entity) {
@@ -59,10 +74,27 @@ void Registry::AddEntityToSystems(Entity entity) {
     }
 }
 
+void Registry::RemoveEntityFromSystems(Entity entity) {
+    for (auto system: systems) {
+        system.second->RemoveEntityFromSystem(entity);
+    }
+}
+
+
 void Registry::Update() {
-    // Add the entities that are waiting to be created to the active systems
+    // Process the entities that are waiting to be created to the active systems
     for (auto entity: entitiesToBeAdded) {
         AddEntityToSystems(entity);
     }
     entitiesToBeAdded.clear();
+
+    // Process the entities that are waiting to be killed from the active systems
+    for (auto entity: entitiesToBeKilled) {
+        RemoveEntityFromSystems(entity);
+        entityComponentSignatures[entity.GetId()].reset();
+
+        // Make the entity id available to be reused
+        freeIds.push_back(entity.GetId());
+    }
+    entitiesToBeKilled.clear();
 }
