@@ -47,6 +47,8 @@ class CollisionSystem: public System {
 
                     if (collisionHappened) {
                         Logger::Log("Entity " + std::to_string(a.GetId()) + " is colliding with entity " + std::to_string(b.GetId()));
+
+                        // TODO: emit an event
                     }
                 }
             } 
