@@ -1,3 +1,8 @@
+v17
+ # Course section 16: Killing Entities
+    + Implemented functionality to remove entities
+    (section completed)
+
 v16
  # Course section 15: Collision System
     + Added BoxColliderComponent, CollisionSystem and RenderColliderSystem
